full-moon/tests/cases/fail/parser/un-op-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/un-op-1
---
error[ast]: unexpected token `not`. not (expected an expression after not)
  ┌─ source.lua:1:8
  │
1 │ return not
  │        ^^^


